@@ -1,3 +1,8 @@
+2013-01-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/hc08/main.c: Nearly exact instruction sizes for peephole
+	  branch optimizations.
+
 2013-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/mcs51/gen.c (genSend): "fix" for bug #3600343
